--- a/deplyment/mongo/mongo-deployment.yaml
+++ b/deplyment/mongo/mongo-deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo-deployment
-  namespace: mongodb
+  name: db-mongo-deployment
+  namespace: db-mongo
   labels:
-    app: mongo
+    app: db-mongo
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: mongo
+      app: db-mongo
   template:
     metadata:
       labels:
-        app: mongo
+        app: db-mongo
     spec:
       containers:
-        - name: mongo
-          image: mongo
+        - name: db- mongo
+          image: db-mongo
           resources:
             limits:
               memory: "128Mi"
@@ -28,10 +28,10 @@ spec:
             - name: MONGO_INITDB_ROOT_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: db-mongo-secret
                   key: mongo-root-username
             - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: db-mongo-secret
                   key: mongo-root-password
