--- a/deplyment/mongo/mongo-secret.yaml
+++ b/deplyment/mongo/mongo-secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mongo-secret
-  namespace: mongodb
+  name: db-mongo-secret
+  namespace: db-mongo
 type: Opaque
 data:
   mongo-root-username: <username>
