--- a/deplyment/mongo/mongo-service.yaml
+++ b/deplyment/mongo/mongo-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongo-service
-  namespace: mongodb
+  name: db-mongo-service
+  namespace: db-mongo
 spec:
   selector:
-    app: mongo
+    app: db-mongo
   ports:
     - protocol: TCP
       port: 27017
